# distil

./: .dockerignore  .env.example  .gitignore  DEPLOY_RAILWAY.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  gitleaks.yml  release.yml
distil/: __init__.py  cli.py  embed.py  extract.py  faithfulness.py  graph.py  ingest.py  link.py  llm.py  models.py  normalize.py  note.py  pipeline.py  profile_update.py  query.py  source.py  store.py  triage.py
distil/prompts/: __init__.py  extract.py  graph.py  link.py  note.py  synthesize.py  triage.py
docs/: AGENT_BUILD_GUIDE.md  ARCHITECTURE.md  PRD.md  SCHEMA.md  TESTING.md  TRACKER.md  WEB_UI_SPEC.md
scripts/: backup_kb.sh
tests/: conftest.py
tests/eval/: test_extract_eval.py  test_query_eval.py  test_triage_eval.py
tests/fixtures/: inline_ts.txt  low_value_vlog.expected.json  low_value_vlog.txt  mixed_talk.expected.json  mixed_talk.txt  no_timestamps.md  procedural_tutorial.expected.json  procedural_tutorial.txt  rich_heuristic.expected.json  rich_heuristic.txt  sample.srt  screen_share.expected.json  screen_share.txt
tests/fixtures/query_kb/: questions.json
tests/unit/: test_cli.py  test_cli_ask.py  test_embed.py  test_extract.py  test_faithfulness.py  test_graph.py  test_ingest.py  test_link.py  test_llm.py  test_models.py  test_normalize.py  test_note.py  test_pipeline.py  test_profile_update.py  test_query.py  test_smoke.py  test_source.py  test_store.py  test_store_vectors.py  test_triage.py  test_web_auth.py  test_web_jobs.py
web/: __init__.py  app.py  auth.py  jobs.py
web/static/: distil.css
web/templates/: base.html  entry.html  index.html  library.html
