[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distil"
version = "0.0.1"
description = "Distil — Personal Knowledge Distiller: faithfully extract knowledge from transcripts and apply it to your goals."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Distil contributors" }]
keywords = ["knowledge-base", "llm", "transcripts", "personal-knowledge-management"]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
]

[project.optional-dependencies]
# LLM provider (default: Anthropic / Claude API). Swap by implementing LLMClient.
anthropic = ["anthropic>=0.34"]
# Local embeddings for provider-independent retrieval (TRACKER D5).
embed-local = ["sentence-transformers>=2.7"]
# Vector search in the same SQLite file (pre-1.0 — pinned).
vec = ["sqlite-vec==0.1.6"]
# Web UI (v0.2).
web = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "jinja2>=3.1"]
# Dev / test tooling.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
distil = "distil.cli:app"

[tool.setuptools.packages.find]
include = ["distil*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "unit: deterministic glue tests, no network, run on every push",
    "eval: LLM behavior tests against fixtures; gated by ANTHROPIC_API_KEY; skipped in normal CI",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",   # line length handled by formatter; long prompt strings are fine
    "UP017",  # keep `timezone.utc` (works on 3.10 dev sandbox and 3.11+); `datetime.UTC` is 3.11-only
]

[tool.coverage.run]
source = ["distil"]
branch = true
